--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,4 @@ sudo: required
 dist: trusty
 
 script:
-  - bash -xve ./test/travis_prepare.bash
-  - source ~/catkin_ws/devel/setup.bash
-  - bash -xve ./test/travis_test.bash
+  - bash -xve ./test/travis_ros_install.bash
